--- a/index.html
+++ b/index.html
@@ -11,16 +11,126 @@
   </head>
   <body>
     <h1>Bręczewscy</h1>
-    <article>
-    <ul class='presents'>
-      <li>Grabki</li>
-      <li>Grzebień</li>
-      <li>Skrzypce</li>
-      <li>Konewka</li>
-      <li>Kolendra</li>
-      <li>Grzyby</li>
-    </ul>
+    <article class='presents'>
+
+      <section>
+        <h1>szybkowar Fagor innova 6 918011849</h1>
+        <p class='price'>217 zł</p>
+        <a href='http://www.ceneo.pl/8361586#tab=spec'>link</a>
+      </section>
+
+      <section>
+        <h1>Patelnia teflonowa 20cm</h1>
+      </section>
+
+      <section>
+        <h1>Patelnia teflonowa 28-30cm</h1>
+      </section>
+
+      <section>
+        <h1>Sakwy rowerowe Crosso DRY BIG</h1>
+        <p class='price'>229 zł</p>
+        <a href='http://www.crosso.pl/pages/pl/produkty/sakwy-rowerowe/dry/dry-big.php'>link</a>
+      </section>
+
+      <section>
+        <h1>U-lock Kryptonite 29,2 cm </h1>
+        <p class='price'>75 zł</p>
+        <a href='http://www.centrumrowerowe.pl/akcesoria/zamki-i-zapiecia-rowerowe/u-locki/p,u-lock-keeper-12-std-kryptonite,46969.html#75521632'>link</a>
+      </section>
+
+      <section>
+        <h1>U-lock Kryptonite 29,2 cm </h1>
+        <p class='price'>75 zł</p>
+        <a href='http://www.centrumrowerowe.pl/akcesoria/zamki-i-zapiecia-rowerowe/u-locki/p,u-lock-keeper-12-std-kryptonite,46969.html#75521632'>link</a>
+      </section>
+
+      <section>
+        <h1>walizka czerwona Puccini ABS01C-3 (mała)</h1>
+        <p class='price'>256 zł</p>
+        <a href='http://firmowewalizki.pl/walizki-na-kolkach/796-nieduza-czerwona-walizka-puccini-abs01c-3-twarda-do-samolotu.html'>link</a>
+      </section>
+
+      <section>
+        <h1>walizka czerwona Puccini ABS01A-3 (duża)</h1>
+        <p class='price'>332 zł</p>
+        <a href='http://firmowewalizki.pl/walizki-na-kolkach/794-duza-czerwona-walizka-puccini-abs01a-3-twarda.html'>link</a>
+      </section>
+
+      <section>
+        <h1>Żelazko Philips GC4890/02</h1>
+        <p class='price'>235 zł</p>
+        <a href='http://www.okazje.info.pl/okazja/sprzet-agd/philips-gc4890.html'>link</a>
+      </section>
+
+      <section>
+        <h1>Deska do prasowania Vileda Viva Express Smart+</h1>
+        <p class='price'>119 zł</p>
+        <a href='http://www.sklep.vileda.pl/produkt/deska_viva_express_smart_.php'>link</a>
+      </section>
+
+      <section>
+        <h1>Odkurzacz Zelmer Syrius 1600</h1>
+        <p class='price'>283 zł</p>
+        <a href='http://www.ceneo.pl/393451'>link</a>
+      </section>
+
+      <section>
+        <h1>Zestaw sztućców Sedlig</h1>
+        <p class='price'>150 zł</p>
+        <a href='http://www.ikea.com/pl/pl/catalog/products/40155311/'>link</a>
+      </section>
+
+      <section>
+        <h1>Zestaw sztućców Sedlig</h1>
+        <p class='price'>150 zł</p>
+        <a href='http://www.ikea.com/pl/pl/catalog/products/40155311/'>link</a>
+      </section>
+
+      <section>
+        <h1>Pojemnik na sztućce Ordning</h1>
+        <p class='price'>15 zł</p>
+        <a href='http://www.ikea.com/pl/pl/catalog/products/30131716'>link</a>
+      </section>
+
+      <section>
+        <h1>Blender Bosch MSM 6700</h1>
+        <p class='price'>155 zł</p>
+        <a href='http://www.ceneo.pl/58315#tab=spec_scroll'>link</a>
+      </section>
+
+      <section>
+        <h1>Waga kuchenna Clatronic KW 3367</h1>
+        <p class='price'>29zł</p>
+        <a href='http://www.ceneo.pl/10547613'>link</a>
+      </section>
+
+      <section>
+        <h1>Czajnikotermos Stalman SLN-2744</h1>
+        <p class='price'>102 zł</p>
+        <a href='http://www.ceneo.pl/10968337'>link</a>
+      </section>
+
+      <section>
+        <h1>Bodum zaparzacz do herbaty 1l assam bd-1844-01</h1>
+        <p class='price'>129 zł</p>
+        <a href='http://www.ceneo.pl/528295allegro'>link</a>
+      </section>
+
+      <section>
+        <h1>Lurch Rękawica Silikonow Bawełniana Oberżyna Lu-00070093</h1>
+        <p class='price'>59 zł</p>
+        <a href='http://www.ceneo.pl/23861608#tab=spec'>link</a>
+      </section>
+
+      <section>
+        <h1>Lurch Rękawica Silikonow Bawełniana Oberżyna Lu-00070093</h1>
+        <p class='price'>59 zł</p>
+        <a href='http://www.ceneo.pl/23861608#tab=spec'>link</a>
+      </section>
+
     </article>
+
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
