--- a/index.html
+++ b/index.html
@@ -17,98 +17,115 @@
         <h1>szybkowar Fagor innova 6 918011849</h1>
         <p class='price'>217 zł</p>
         <a href='http://www.ceneo.pl/8361586#tab=spec' target='_blank'>link</a>
+        <a href='mailto:prezenty.breczewscy@gmail.com?Subject=Rezerwacja%20prezentu%20weselnego'>Zarezerwuj mailowo</a>
       </section>
 
       <section>
         <h1>Patelnia teflonowa 20cm</h1>
+        <a href='mailto:prezenty.breczewscy@gmail.com?Subject=Rezerwacja%20prezentu%20weselnego'>Zarezerwuj mailowo</a>
       </section>
 
       <section>
         <h1>Patelnia teflonowa 28-30cm</h1>
+        <a href='mailto:prezenty.breczewscy@gmail.com?Subject=Rezerwacja%20prezentu%20weselnego'>Zarezerwuj mailowo</a>
       </section>
 
       <section>
         <h1>Sakwy rowerowe Crosso DRY BIG</h1>
         <p class='price'>229 zł</p>
         <a href='http://www.crosso.pl/pages/pl/produkty/sakwy-rowerowe/dry/dry-big.php' target='_blank'>link</a>
+        <a href='mailto:prezenty.breczewscy@gmail.com?Subject=Rezerwacja%20prezentu%20weselnego'>Zarezerwuj mailowo</a>
       </section>
 
       <section>
         <h1>U-lock Kryptonite 29,2 cm </h1>
         <p class='price'>75 zł</p>
         <a href='http://www.centrumrowerowe.pl/akcesoria/zamki-i-zapiecia-rowerowe/u-locki/p,u-lock-keeper-12-std-kryptonite,46969.html#75521632' target='_blank'>link</a>
+        <a href='mailto:prezenty.breczewscy@gmail.com?Subject=Rezerwacja%20prezentu%20weselnego'>Zarezerwuj mailowo</a>
       </section>
 
       <section>
         <h1>U-lock Kryptonite 29,2 cm </h1>
         <p class='price'>75 zł</p>
         <a href='http://www.centrumrowerowe.pl/akcesoria/zamki-i-zapiecia-rowerowe/u-locki/p,u-lock-keeper-12-std-kryptonite,46969.html#75521632' target='_blank'>link</a>
+        <a href='mailto:prezenty.breczewscy@gmail.com?Subject=Rezerwacja%20prezentu%20weselnego'>Zarezerwuj mailowo</a>
       </section>
 
       <section>
         <h1>walizka czerwona Puccini ABS01C-3 (mała)</h1>
         <p class='price'>256 zł</p>
         <a href='http://firmowewalizki.pl/walizki-na-kolkach/796-nieduza-czerwona-walizka-puccini-abs01c-3-twarda-do-samolotu.html' target='_blank'>link</a>
+        <a href='mailto:prezenty.breczewscy@gmail.com?Subject=Rezerwacja%20prezentu%20weselnego'>Zarezerwuj mailowo</a>
       </section>
 
       <section>
         <h1>walizka czerwona Puccini ABS01A-3 (duża)</h1>
         <p class='price'>332 zł</p>
         <a href='http://firmowewalizki.pl/walizki-na-kolkach/794-duza-czerwona-walizka-puccini-abs01a-3-twarda.html' target='_blank'>link</a>
+        <a href='mailto:prezenty.breczewscy@gmail.com?Subject=Rezerwacja%20prezentu%20weselnego'>Zarezerwuj mailowo</a>
       </section>
 
       <section>
         <h1>Żelazko Philips GC4890/02</h1>
         <p class='price'>235 zł</p>
         <a href='http://www.okazje.info.pl/okazja/sprzet-agd/philips-gc4890.html' target='_blank'>link</a>
+        <a href='mailto:prezenty.breczewscy@gmail.com?Subject=Rezerwacja%20prezentu%20weselnego'>Zarezerwuj mailowo</a>
       </section>
 
       <section>
         <h1>Deska do prasowania Vileda Viva Express Smart+</h1>
         <p class='price'>119 zł</p>
         <a href='http://www.sklep.vileda.pl/produkt/deska_viva_express_smart_.php' target='_blank'>link</a>
+        <a href='mailto:prezenty.breczewscy@gmail.com?Subject=Rezerwacja%20prezentu%20weselnego'>Zarezerwuj mailowo</a>
       </section>
 
       <section>
         <h1>Odkurzacz Zelmer Syrius 1600</h1>
         <p class='price'>283 zł</p>
         <a href='http://www.ceneo.pl/393451' target='_blank'>link</a>
+        <a href='mailto:prezenty.breczewscy@gmail.com?Subject=Rezerwacja%20prezentu%20weselnego'>Zarezerwuj mailowo</a>
       </section>
 
       <section>
         <h1>Zestaw sztućców Sedlig</h1>
         <p class='price'>150 zł</p>
         <a href='http://www.ikea.com/pl/pl/catalog/products/40155311/' target='_blank'>link</a>
+        <a href='mailto:prezenty.breczewscy@gmail.com?Subject=Rezerwacja%20prezentu%20weselnego'>Zarezerwuj mailowo</a>
       </section>
 
       <section>
         <h1>Zestaw sztućców Sedlig</h1>
         <p class='price'>150 zł</p>
         <a href='http://www.ikea.com/pl/pl/catalog/products/40155311/' target='_blank'>link</a>
+        <a href='mailto:prezenty.breczewscy@gmail.com?Subject=Rezerwacja%20prezentu%20weselnego'>Zarezerwuj mailowo</a>
       </section>
 
       <section>
         <h1>Pojemnik na sztućce Ordning</h1>
         <p class='price'>15 zł</p>
         <a href='http://www.ikea.com/pl/pl/catalog/products/30131716' target='_blank'>link</a>
+        <a href='mailto:prezenty.breczewscy@gmail.com?Subject=Rezerwacja%20prezentu%20weselnego'>Zarezerwuj mailowo</a>
       </section>
 
       <section>
         <h1>Blender Bosch MSM 6700</h1>
         <p class='price'>155 zł</p>
         <a href='http://www.ceneo.pl/58315#tab=spec_scroll' target='_blank'>link</a>
+        <a href='mailto:prezenty.breczewscy@gmail.com?Subject=Rezerwacja%20prezentu%20weselnego'>Zarezerwuj mailowo</a>
       </section>
 
       <section>
         <h1>Waga kuchenna Clatronic KW 3367</h1>
         <p class='price'>29zł</p>
         <a href='http://www.ceneo.pl/10547613' target='_blank'>link</a>
+        <a href='mailto:prezenty.breczewscy@gmail.com?Subject=Rezerwacja%20prezentu%20weselnego'>Zarezerwuj mailowo</a>
       </section>
 
       <section>
         <h1>Czajnikotermos Stalman SLN-2744</h1>
         <p class='price'>102 zł</p>
         <a href='http://www.ceneo.pl/10968337' target='_blank'>link</a>
+        <a href='mailto:prezenty.breczewscy@gmail.com?Subject=Rezerwacja%20prezentu%20weselnego'>Zarezerwuj mailowo</a>
       </section>
 
       <section>
@@ -121,12 +138,14 @@
         <h1>Lurch Rękawica Silikonow Bawełniana Oberżyna Lu-00070093</h1>
         <p class='price'>59 zł</p>
         <a href='http://www.ceneo.pl/23861608#tab=spec' target='_blank'>link</a>
+        <a href='mailto:prezenty.breczewscy@gmail.com?Subject=Rezerwacja%20prezentu%20weselnego'>Zarezerwuj mailowo</a>
       </section>
 
       <section>
         <h1>Lurch Rękawica Silikonow Bawełniana Oberżyna Lu-00070093</h1>
         <p class='price'>59 zł</p>
         <a href='http://www.ceneo.pl/23861608#tab=spec' target='_blank'>link</a>
+        <a href='mailto:prezenty.breczewscy@gmail.com?Subject=Rezerwacja%20prezentu%20weselnego'>Zarezerwuj mailowo</a>
       </section>
 
     </article>
