add header image

--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
   </head>
   <body>
     <div class='content'>
-      <h1>Bręczewscy</h1>
+      <div class='header-image'>
+        <img src='/breczewscy.jpg'/>
+      </div>
       <article class='presents'>
 
         <section>
