--- a/index.html
+++ b/index.html
@@ -16,6 +16,13 @@
       <div class='header-image'>
         <img src='/breczewscy.jpg'/>
       </div>
+      <div class='welcome'>
+        <p>Cieszymy się, że zajrzeliście na naszą stronę. Poniżej znajdziecie listę prezentów, którą przygotowaliśmy, aby ułatwić Wam decyzję o</p>
+        <p>W związku z tym, że będziemy urządzali nasze gospodarstwo domowe od podstaw, ucieszyłyby nas środki finansowe na ten cel. Jeśli wygodniej byłoby Wam dokonać przelewu, to podajemy numer konta bankowego Hani:<p>
+        <code class='account'>1234567890123455</code>
+        <p>Dane do przelewu znajdziecie na odwrocie zaproszenia lub zawiadomienia (adres domu weselnego).</p>
+        <p>Jeżeli wolelibyście podarować nam prezent rzeczowy, to poniżej znajduje się lista naszych propozycji.</p>
+      </div>
       <article class='presents'>
 
         <section>
