trying to make it prett-eh

--- a/index.html
+++ b/index.html
@@ -26,11 +26,17 @@
       <article class='presents'>
 
         <section>
-          <h1>szybkowar Fagor innova 6 918011849</h1>
-          <p class='price'>217 zł</p>
-          <div class='btn-group'>
-            <a class='btn btn-default' href='http://www.ceneo.pl/8361586#tab=spec' target='_blank'>link</a>
-            <a class='btn btn-default' href='mailto:prezenty.breczewscy@gmail.com?Subject=Rezerwacja%20prezentu%20weselnego'>Zarezerwuj mailowo</a>
+          <div class='row'>
+            <div class='col-8'>
+              <h1>szybkowar Fagor innova 6 918011849</h1>
+            </div>
+            <div class='col-4'>
+              <p class='price'>217 zł</p>
+              <div class='btn-group'>
+                <a class='btn btn-default' href='http://www.ceneo.pl/8361586#tab=spec' target='_blank'>link</a>
+                <a class='btn btn-default' href='mailto:prezenty.breczewscy@gmail.com?Subject=Rezerwacja%20prezentu%20weselnego'>Zarezerwuj mailowo</a>
+              </div>
+            </div>
           </div>
         </section>
 
