--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <div class='col-8'>
               <h1>szybkowar Fagor innova 6 918011849</h1>
             </div>
-            <div class='col-4'>
+            <div class='col-4 info'>
               <p class='price'>217 zł</p>
               <div class='btn-group'>
                 <a class='btn btn-default' href='http://www.ceneo.pl/8361586#tab=spec' target='_blank'>link</a>
