--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Breczewscy.com</title>
+    <title>breczewscy.com</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link rel="icon" type="image/png" href="/favicon.ico">
@@ -39,169 +39,283 @@
         </section>
 
         <section>
-          <h1>Patelnia teflonowa 20cm</h1>
-          <div class='btn-group'>
-            <a class='btn btn-default' href='mailto:prezenty.breczewscy@gmail.com?Subject=Rezerwacja%20prezentu%20weselnego'>Zarezerwuj mailowo</a>
+          <div class='row'>
+            <div class='col-8'>
+              <h1>Patelnia teflonowa 20cm</h1>
+            </div>
+            <div class='col-4 info'>
+              <div class='btn-group'>
+                <a class='btn btn-default' href='mailto:prezenty.breczewscy@gmail.com?Subject=Rezerwacja%20prezentu%20weselnego'>Zarezerwuj mailowo</a>
+              </div>
+            </div>
           </div>
         </section>
 
         <section>
-          <h1>Patelnia teflonowa 28-30cm</h1>
-          <div class='btn-group'>
-            <a class='btn btn-default' href='mailto:prezenty.breczewscy@gmail.com?Subject=Rezerwacja%20prezentu%20weselnego'>Zarezerwuj mailowo</a>
+          <div class='row'>
+            <div class='col-8'>
+              <h1>Patelnia teflonowa 28-30cm</h1>
+            </div>
+            <div class='col-4 info'>
+              <div class='btn-group'>
+                <a class='btn btn-default' href='mailto:prezenty.breczewscy@gmail.com?Subject=Rezerwacja%20prezentu%20weselnego'>Zarezerwuj mailowo</a>
+              </div>
+            </div>
           </div>
         </section>
 
         <section>
-          <h1>Sakwy rowerowe Crosso DRY BIG</h1>
-          <p class='price'>229 zł</p>
-          <div class='btn-group'>
-            <a class='btn btn-default' href='http://www.crosso.pl/pages/pl/produkty/sakwy-rowerowe/dry/dry-big.php' target='_blank'>link</a>
-            <a class='btn btn-default' href='mailto:prezenty.breczewscy@gmail.com?Subject=Rezerwacja%20prezentu%20weselnego'>Zarezerwuj mailowo</a>
+          <div class='row'>
+            <div class='col-8'>
+              <h1>Sakwy rowerowe Crosso DRY BIG</h1>
+            </div>
+            <div class='col-4 info'>
+              <p class='price'>229 zł</p>
+              <div class='btn-group'>
+                <a class='btn btn-default' href='http://www.crosso.pl/pages/pl/produkty/sakwy-rowerowe/dry/dry-big.php' target='_blank'>link</a>
+                <a class='btn btn-default' href='mailto:prezenty.breczewscy@gmail.com?Subject=Rezerwacja%20prezentu%20weselnego'>Zarezerwuj mailowo</a>
+              </div>
+            </div>
           </div>
         </section>
 
         <section>
-          <h1>U-lock Kryptonite 29,2 cm </h1>
-          <p class='price'>75 zł</p>
-          <div class='btn-group'>
-            <a class='btn btn-default' href='http://www.centrumrowerowe.pl/akcesoria/zamki-i-zapiecia-rowerowe/u-locki/p,u-lock-keeper-12-std-kryptonite,46969.html#75521632' target='_blank'>link</a>
-            <a class='btn btn-default' href='mailto:prezenty.breczewscy@gmail.com?Subject=Rezerwacja%20prezentu%20weselnego'>Zarezerwuj mailowo</a>
+          <div class='row'>
+            <div class='col-8'>
+              <h1>U-lock Kryptonite 29,2 cm </h1>
+            </div>
+            <div class='col-4 info'>
+              <p class='price'>75 zł</p>
+              <div class='btn-group'>
+                <a class='btn btn-default' href='http://www.centrumrowerowe.pl/akcesoria/zamki-i-zapiecia-rowerowe/u-locki/p,u-lock-keeper-12-std-kryptonite,46969.html#75521632' target='_blank'>link</a>
+                <a class='btn btn-default' href='mailto:prezenty.breczewscy@gmail.com?Subject=Rezerwacja%20prezentu%20weselnego'>Zarezerwuj mailowo</a>
+              </div>
+            </div>
           </div>
         </section>
 
         <section>
-          <h1>U-lock Kryptonite 29,2 cm </h1>
-          <p class='price'>75 zł</p>
-          <div class='btn-group'>
-            <a class='btn btn-default' href='http://www.centrumrowerowe.pl/akcesoria/zamki-i-zapiecia-rowerowe/u-locki/p,u-lock-keeper-12-std-kryptonite,46969.html#75521632' target='_blank'>link</a>
-            <a class='btn btn-default' href='mailto:prezenty.breczewscy@gmail.com?Subject=Rezerwacja%20prezentu%20weselnego'>Zarezerwuj mailowo</a>
+          <div class='row'>
+            <div class='col-8'>
+              <h1>U-lock Kryptonite 29,2 cm </h1>
+            </div>
+            <div class='col-4 info'>
+              <p class='price'>75 zł</p>
+              <div class='btn-group'>
+                <a class='btn btn-default' href='http://www.centrumrowerowe.pl/akcesoria/zamki-i-zapiecia-rowerowe/u-locki/p,u-lock-keeper-12-std-kryptonite,46969.html#75521632' target='_blank'>link</a>
+                <a class='btn btn-default' href='mailto:prezenty.breczewscy@gmail.com?Subject=Rezerwacja%20prezentu%20weselnego'>Zarezerwuj mailowo</a>
+              </div>
+            </div>
           </div>
         </section>
 
         <section>
-          <h1>walizka czerwona Puccini ABS01C-3 (mała)</h1>
-          <p class='price'>256 zł</p>
-          <div class='btn-group'>
-            <a class='btn btn-default' href='http://firmowewalizki.pl/walizki-na-kolkach/796-nieduza-czerwona-walizka-puccini-abs01c-3-twarda-do-samolotu.html' target='_blank'>link</a>
-            <a class='btn btn-default' href='mailto:prezenty.breczewscy@gmail.com?Subject=Rezerwacja%20prezentu%20weselnego'>Zarezerwuj mailowo</a>
+          <div class='row'>
+            <div class='col-8'>
+              <h1>walizka czerwona Puccini ABS01C-3 (mała)</h1>
+            </div>
+            <div class='col-4 info'>
+              <p class='price'>256 zł</p>
+              <div class='btn-group'>
+                <a class='btn btn-default' href='http://firmowewalizki.pl/walizki-na-kolkach/796-nieduza-czerwona-walizka-puccini-abs01c-3-twarda-do-samolotu.html' target='_blank'>link</a>
+                <a class='btn btn-default' href='mailto:prezenty.breczewscy@gmail.com?Subject=Rezerwacja%20prezentu%20weselnego'>Zarezerwuj mailowo</a>
+              </div>
+            </div>
           </div>
         </section>
 
         <section>
-          <h1>walizka czerwona Puccini ABS01A-3 (duża)</h1>
-          <p class='price'>332 zł</p>
-          <div class='btn-group'>
-            <a class='btn btn-default' href='http://firmowewalizki.pl/walizki-na-kolkach/794-duza-czerwona-walizka-puccini-abs01a-3-twarda.html' target='_blank'>link</a>
-            <a class='btn btn-default' href='mailto:prezenty.breczewscy@gmail.com?Subject=Rezerwacja%20prezentu%20weselnego'>Zarezerwuj mailowo</a>
+          <div class='row'>
+            <div class='col-8'>
+              <h1>walizka czerwona Puccini ABS01A-3 (duża)</h1>
+            </div>
+            <div class='col-4 info'>
+              <p class='price'>332 zł</p>
+              <div class='btn-group'>
+                <a class='btn btn-default' href='http://firmowewalizki.pl/walizki-na-kolkach/794-duza-czerwona-walizka-puccini-abs01a-3-twarda.html' target='_blank'>link</a>
+                <a class='btn btn-default' href='mailto:prezenty.breczewscy@gmail.com?Subject=Rezerwacja%20prezentu%20weselnego'>Zarezerwuj mailowo</a>
+              </div>
+            </div>
           </div>
         </section>
 
         <section>
-          <h1>Żelazko Philips GC4890/02</h1>
-          <p class='price'>235 zł</p>
-          <div class='btn-group'>
-            <a class='btn btn-default' href='http://www.okazje.info.pl/okazja/sprzet-agd/philips-gc4890.html' target='_blank'>link</a>
-            <a class='btn btn-default' href='mailto:prezenty.breczewscy@gmail.com?Subject=Rezerwacja%20prezentu%20weselnego'>Zarezerwuj mailowo</a>
+          <div class='row'>
+            <div class='col-8'>
+              <h1>Żelazko Philips GC4890/02</h1>
+            </div>
+            <div class='col-4 info'>
+              <p class='price'>235 zł</p>
+              <div class='btn-group'>
+                <a class='btn btn-default' href='http://www.okazje.info.pl/okazja/sprzet-agd/philips-gc4890.html' target='_blank'>link</a>
+                <a class='btn btn-default' href='mailto:prezenty.breczewscy@gmail.com?Subject=Rezerwacja%20prezentu%20weselnego'>Zarezerwuj mailowo</a>
+              </div>
+            </div>
           </div>
         </section>
 
         <section>
-          <h1>Deska do prasowania Vileda Viva Express Smart+</h1>
-          <p class='price'>119 zł</p>
-          <div class='btn-group'>
-            <a class='btn btn-default' href='http://www.sklep.vileda.pl/produkt/deska_viva_express_smart_.php' target='_blank'>link</a>
-            <a class='btn btn-default' href='mailto:prezenty.breczewscy@gmail.com?Subject=Rezerwacja%20prezentu%20weselnego'>Zarezerwuj mailowo</a>
+          <div class='row'>
+            <div class='col-8'>
+              <h1>Deska do prasowania Vileda Viva Express Smart+</h1>
+            </div>
+            <div class='col-4 info'>
+              <p class='price'>119 zł</p>
+              <div class='btn-group'>
+                <a class='btn btn-default' href='http://www.sklep.vileda.pl/produkt/deska_viva_express_smart_.php' target='_blank'>link</a>
+                <a class='btn btn-default' href='mailto:prezenty.breczewscy@gmail.com?Subject=Rezerwacja%20prezentu%20weselnego'>Zarezerwuj mailowo</a>
+              </div>
+            </div>
           </div>
         </section>
 
         <section>
-          <h1>Odkurzacz Zelmer Syrius 1600</h1>
-          <p class='price'>283 zł</p>
-          <div class='btn-group'>
-            <a class='btn btn-default' href='http://www.ceneo.pl/393451' target='_blank'>link</a>
-            <a class='btn btn-default' href='mailto:prezenty.breczewscy@gmail.com?Subject=Rezerwacja%20prezentu%20weselnego'>Zarezerwuj mailowo</a>
+          <div class='row'>
+            <div class='col-8'>
+              <h1>Odkurzacz Zelmer Syrius 1600</h1>
+            </div>
+            <div class='col-4 info'>
+              <p class='price'>283 zł</p>
+              <div class='btn-group'>
+                <a class='btn btn-default' href='http://www.ceneo.pl/393451' target='_blank'>link</a>
+                <a class='btn btn-default' href='mailto:prezenty.breczewscy@gmail.com?Subject=Rezerwacja%20prezentu%20weselnego'>Zarezerwuj mailowo</a>
+              </div>
+            </div>
           </div>
         </section>
 
         <section>
-          <h1>Zestaw sztućców Sedlig</h1>
-          <p class='price'>150 zł</p>
-          <div class='btn-group'>
-            <a class='btn btn-default' href='http://www.ikea.com/pl/pl/catalog/products/40155311/' target='_blank'>link</a>
-            <a class='btn btn-default' href='mailto:prezenty.breczewscy@gmail.com?Subject=Rezerwacja%20prezentu%20weselnego'>Zarezerwuj mailowo</a>
+          <div class='row'>
+            <div class='col-8'>
+              <h1>Zestaw sztućców Sedlig</h1>
+            </div>
+            <div class='col-4 info'>
+              <p class='price'>150 zł</p>
+              <div class='btn-group'>
+                <a class='btn btn-default' href='http://www.ikea.com/pl/pl/catalog/products/40155311/' target='_blank'>link</a>
+                <a class='btn btn-default' href='mailto:prezenty.breczewscy@gmail.com?Subject=Rezerwacja%20prezentu%20weselnego'>Zarezerwuj mailowo</a>
+              </div>
+            </div>
           </div>
         </section>
 
         <section>
-          <h1>Zestaw sztućców Sedlig</h1>
-          <p class='price'>150 zł</p>
-          <div class='btn-group'>
-            <a class='btn btn-default' href='http://www.ikea.com/pl/pl/catalog/products/40155311/' target='_blank'>link</a>
-            <a class='btn btn-default' href='mailto:prezenty.breczewscy@gmail.com?Subject=Rezerwacja%20prezentu%20weselnego'>Zarezerwuj mailowo</a>
+          <div class='row'>
+            <div class='col-8'>
+              <h1>Zestaw sztućców Sedlig</h1>
+            </div>
+            <div class='col-4 info'>
+              <p class='price'>150 zł</p>
+              <div class='btn-group'>
+                <a class='btn btn-default' href='http://www.ikea.com/pl/pl/catalog/products/40155311/' target='_blank'>link</a>
+                <a class='btn btn-default' href='mailto:prezenty.breczewscy@gmail.com?Subject=Rezerwacja%20prezentu%20weselnego'>Zarezerwuj mailowo</a>
+              </div>
+            </div>
           </div>
         </section>
 
         <section>
-          <h1>Pojemnik na sztućce Ordning</h1>
-          <p class='price'>15 zł</p>
-          <div class='btn-group'>
-            <a class='btn btn-default' href='http://www.ikea.com/pl/pl/catalog/products/30131716' target='_blank'>link</a>
-            <a class='btn btn-default' href='mailto:prezenty.breczewscy@gmail.com?Subject=Rezerwacja%20prezentu%20weselnego'>Zarezerwuj mailowo</a>
+          <div class='row'>
+            <div class='col-8'>
+              <h1>Pojemnik na sztućce Ordning</h1>
+            </div>
+            <div class='col-4 info'>
+              <p class='price'>15 zł</p>
+              <div class='btn-group'>
+                <a class='btn btn-default' href='http://www.ikea.com/pl/pl/catalog/products/30131716' target='_blank'>link</a>
+                <a class='btn btn-default' href='mailto:prezenty.breczewscy@gmail.com?Subject=Rezerwacja%20prezentu%20weselnego'>Zarezerwuj mailowo</a>
+              </div>
+            </div>
           </div>
         </section>
 
         <section>
-          <h1>Blender Bosch MSM 6700</h1>
-          <p class='price'>155 zł</p>
-          <div class='btn-group'>
-            <a class='btn btn-default' href='http://www.ceneo.pl/58315#tab=spec_scroll' target='_blank'>link</a>
-            <a class='btn btn-default' href='mailto:prezenty.breczewscy@gmail.com?Subject=Rezerwacja%20prezentu%20weselnego'>Zarezerwuj mailowo</a>
+          <div class='row'>
+            <div class='col-8'>
+              <h1>Blender Bosch MSM 6700</h1>
+            </div>
+            <div class='col-4 info'>
+              <p class='price'>155 zł</p>
+              <div class='btn-group'>
+                <a class='btn btn-default' href='http://www.ceneo.pl/58315#tab=spec_scroll' target='_blank'>link</a>
+                <a class='btn btn-default' href='mailto:prezenty.breczewscy@gmail.com?Subject=Rezerwacja%20prezentu%20weselnego'>Zarezerwuj mailowo</a>
+              </div>
+            </div>
           </div>
         </section>
 
         <section>
-          <h1>Waga kuchenna Clatronic KW 3367</h1>
-          <p class='price'>29zł</p>
-          <div class='btn-group'>
-            <a class='btn btn-default' href='http://www.ceneo.pl/10547613' target='_blank'>link</a>
-            <a class='btn btn-default' href='mailto:prezenty.breczewscy@gmail.com?Subject=Rezerwacja%20prezentu%20weselnego'>Zarezerwuj mailowo</a>
+          <div class='row'>
+            <div class='col-8'>
+              <h1>Waga kuchenna Clatronic KW 3367</h1>
+            </div>
+            <div class='col-4 info'>
+              <p class='price'>29zł</p>
+              <div class='btn-group'>
+                <a class='btn btn-default' href='http://www.ceneo.pl/10547613' target='_blank'>link</a>
+                <a class='btn btn-default' href='mailto:prezenty.breczewscy@gmail.com?Subject=Rezerwacja%20prezentu%20weselnego'>Zarezerwuj mailowo</a>
+              </div>
+            </div>
           </div>
         </section>
 
         <section>
-          <h1>Czajnikotermos Stalman SLN-2744</h1>
-          <p class='price'>102 zł</p>
-          <div class='btn-group'>
-            <a class='btn btn-default' href='http://www.ceneo.pl/10968337' target='_blank'>link</a>
-            <a class='btn btn-default' href='mailto:prezenty.breczewscy@gmail.com?Subject=Rezerwacja%20prezentu%20weselnego'>Zarezerwuj mailowo</a>
+          <div class='row'>
+            <div class='col-8'>
+              <h1>Czajnikotermos Stalman SLN-2744</h1>
+            </div>
+            <div class='col-4 info'>
+              <p class='price'>102 zł</p>
+              <div class='btn-group'>
+                <a class='btn btn-default' href='http://www.ceneo.pl/10968337' target='_blank'>link</a>
+                <a class='btn btn-default' href='mailto:prezenty.breczewscy@gmail.com?Subject=Rezerwacja%20prezentu%20weselnego'>Zarezerwuj mailowo</a>
+              </div>
+            </div>
           </div>
         </section>
 
         <section>
-          <h1>Bodum zaparzacz do herbaty 1l assam bd-1844-01</h1>
-          <p class='price'>129 zł</p>
-          <div class='btn-group'>
-            <a class='btn btn-default' href='http://www.ceneo.pl/528295allegro' target='_blank'>link</a>
-            <a class='btn btn-default' href='mailto:prezenty.breczewscy@gmail.com?Subject=Rezerwacja%20prezentu%20weselnego'>Zarezerwuj mailowo</a>
+          <div class='row'>
+            <div class='col-8'>
+              <h1>Bodum zaparzacz do herbaty 1l assam bd-1844-01</h1>
+            </div>
+            <div class='col-4 info'>
+              <p class='price'>129 zł</p>
+              <div class='btn-group'>
+                <a class='btn btn-default' href='http://www.ceneo.pl/528295allegro' target='_blank'>link</a>
+                <a class='btn btn-default' href='mailto:prezenty.breczewscy@gmail.com?Subject=Rezerwacja%20prezentu%20weselnego'>Zarezerwuj mailowo</a>
+              </div>
+            </div>
           </div>
         </section>
 
         <section>
-          <h1>Lurch Rękawica Silikonow Bawełniana Oberżyna Lu-00070093</h1>
-          <p class='price'>59 zł</p>
-          <div class='btn-group'>
-            <a class='btn btn-default' href='http://www.ceneo.pl/23861608#tab=spec' target='_blank'>link</a>
-            <a class='btn btn-default' href='mailto:prezenty.breczewscy@gmail.com?Subject=Rezerwacja%20prezentu%20weselnego'>Zarezerwuj mailowo</a>
+          <div class='row'>
+            <div class='col-8'>
+              <h1>Lurch Rękawica Silikonow Bawełniana Oberżyna Lu-00070093</h1>
+            </div>
+            <div class='col-4 info'>
+              <p class='price'>59 zł</p>
+              <div class='btn-group'>
+                <a class='btn btn-default' href='http://www.ceneo.pl/23861608#tab=spec' target='_blank'>link</a>
+                <a class='btn btn-default' href='mailto:prezenty.breczewscy@gmail.com?Subject=Rezerwacja%20prezentu%20weselnego'>Zarezerwuj mailowo</a>
+              </div>
+            </div>
           </div>
         </section>
 
         <section>
-          <h1>Lurch Rękawica Silikonow Bawełniana Oberżyna Lu-00070093</h1>
-          <p class='price'>59 zł</p>
-          <div class='btn-group'>
-            <a class='btn btn-default' href='http://www.ceneo.pl/23861608#tab=spec' target='_blank'>link</a>
-            <a class='btn btn-default' href='mailto:prezenty.breczewscy@gmail.com?Subject=Rezerwacja%20prezentu%20weselnego'>Zarezerwuj mailowo</a>
+          <div class='row'>
+            <div class='col-8'>
+              <h1>Lurch Rękawica Silikonow Bawełniana Oberżyna Lu-00070093</h1>
+            </div>
+            <div class='col-4 info'>
+              <p class='price'>59 zł</p>
+              <div class='btn-group'>
+                <a class='btn btn-default' href='http://www.ceneo.pl/23861608#tab=spec' target='_blank'>link</a>
+                <a class='btn btn-default' href='mailto:prezenty.breczewscy@gmail.com?Subject=Rezerwacja%20prezentu%20weselnego'>Zarezerwuj mailowo</a>
+              </div>
+            </div>
           </div>
         </section>
 
