separate dir for assets

--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
     <title>breczewscy.com</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <link rel="icon" type="image/png" href="/favicon.ico">
+    <link rel="icon" type="image/png" href="assets/favicon.ico">
     <link href='http://fonts.googleapis.com/css?family=Oswald:300&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
     <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0-rc1/css/bootstrap.min.css" rel='stylesheet'>
-    <link href="/main.css" rel='stylesheet'>
+    <link href="assets/main.css" rel='stylesheet'>
   </head>
   <body>
     <div class='content'>
       <div class='header-image'>
-        <img src='/breczewscy.jpg'/>
+        <img src='assets/breczewscy.jpg'/>
       </div>
       <div class='welcome'>
         <p>Cieszymy się, że zajrzeliście na naszą stronę. Poniżej znajdziecie listę prezentów, którą przygotowaliśmy, aby ułatwić Wam decyzję o</p>
