--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <div class='col-4 info'>
               <p class='price'>217 zł</p>
               <div class='btn-group'>
-                <a class='btn btn-default' href='http://www.ceneo.pl/8361586#tab=spec' target='_blank'>link</a>
+                <a class='btn btn-default' href='http://www.ceneo.pl/8361586#tab=spec' target='_blank'>Zobacz w sklepie</a>
                 <a class='btn btn-default' href='mailto:prezenty.breczewscy@gmail.com?Subject=Rezerwacja%20prezentu%20weselnego'>Zarezerwuj mailowo</a>
               </div>
             </div>
@@ -72,7 +72,7 @@
             <div class='col-4 info'>
               <p class='price'>229 zł</p>
               <div class='btn-group'>
-                <a class='btn btn-default' href='http://www.crosso.pl/pages/pl/produkty/sakwy-rowerowe/dry/dry-big.php' target='_blank'>link</a>
+                <a class='btn btn-default' href='http://www.crosso.pl/pages/pl/produkty/sakwy-rowerowe/dry/dry-big.php' target='_blank'>Zobacz w sklepie</a>
                 <a class='btn btn-default' href='mailto:prezenty.breczewscy@gmail.com?Subject=Rezerwacja%20prezentu%20weselnego'>Zarezerwuj mailowo</a>
               </div>
             </div>
@@ -87,7 +87,7 @@
             <div class='col-4 info'>
               <p class='price'>75 zł</p>
               <div class='btn-group'>
-                <a class='btn btn-default' href='http://www.centrumrowerowe.pl/akcesoria/zamki-i-zapiecia-rowerowe/u-locki/p,u-lock-keeper-12-std-kryptonite,46969.html#75521632' target='_blank'>link</a>
+                <a class='btn btn-default' href='http://www.centrumrowerowe.pl/akcesoria/zamki-i-zapiecia-rowerowe/u-locki/p,u-lock-keeper-12-std-kryptonite,46969.html#75521632' target='_blank'>Zobacz w sklepie</a>
                 <a class='btn btn-default' href='mailto:prezenty.breczewscy@gmail.com?Subject=Rezerwacja%20prezentu%20weselnego'>Zarezerwuj mailowo</a>
               </div>
             </div>
@@ -102,7 +102,7 @@
             <div class='col-4 info'>
               <p class='price'>75 zł</p>
               <div class='btn-group'>
-                <a class='btn btn-default' href='http://www.centrumrowerowe.pl/akcesoria/zamki-i-zapiecia-rowerowe/u-locki/p,u-lock-keeper-12-std-kryptonite,46969.html#75521632' target='_blank'>link</a>
+                <a class='btn btn-default' href='http://www.centrumrowerowe.pl/akcesoria/zamki-i-zapiecia-rowerowe/u-locki/p,u-lock-keeper-12-std-kryptonite,46969.html#75521632' target='_blank'>Zobacz w sklepie</a>
                 <a class='btn btn-default' href='mailto:prezenty.breczewscy@gmail.com?Subject=Rezerwacja%20prezentu%20weselnego'>Zarezerwuj mailowo</a>
               </div>
             </div>
@@ -117,7 +117,7 @@
             <div class='col-4 info'>
               <p class='price'>256 zł</p>
               <div class='btn-group'>
-                <a class='btn btn-default' href='http://firmowewalizki.pl/walizki-na-kolkach/796-nieduza-czerwona-walizka-puccini-abs01c-3-twarda-do-samolotu.html' target='_blank'>link</a>
+                <a class='btn btn-default' href='http://firmowewalizki.pl/walizki-na-kolkach/796-nieduza-czerwona-walizka-puccini-abs01c-3-twarda-do-samolotu.html' target='_blank'>Zobacz w sklepie</a>
                 <a class='btn btn-default' href='mailto:prezenty.breczewscy@gmail.com?Subject=Rezerwacja%20prezentu%20weselnego'>Zarezerwuj mailowo</a>
               </div>
             </div>
@@ -132,7 +132,7 @@
             <div class='col-4 info'>
               <p class='price'>332 zł</p>
               <div class='btn-group'>
-                <a class='btn btn-default' href='http://firmowewalizki.pl/walizki-na-kolkach/794-duza-czerwona-walizka-puccini-abs01a-3-twarda.html' target='_blank'>link</a>
+                <a class='btn btn-default' href='http://firmowewalizki.pl/walizki-na-kolkach/794-duza-czerwona-walizka-puccini-abs01a-3-twarda.html' target='_blank'>Zobacz w sklepie</a>
                 <a class='btn btn-default' href='mailto:prezenty.breczewscy@gmail.com?Subject=Rezerwacja%20prezentu%20weselnego'>Zarezerwuj mailowo</a>
               </div>
             </div>
@@ -147,7 +147,7 @@
             <div class='col-4 info'>
               <p class='price'>235 zł</p>
               <div class='btn-group'>
-                <a class='btn btn-default' href='http://www.okazje.info.pl/okazja/sprzet-agd/philips-gc4890.html' target='_blank'>link</a>
+                <a class='btn btn-default' href='http://www.okazje.info.pl/okazja/sprzet-agd/philips-gc4890.html' target='_blank'>Zobacz w sklepie</a>
                 <a class='btn btn-default' href='mailto:prezenty.breczewscy@gmail.com?Subject=Rezerwacja%20prezentu%20weselnego'>Zarezerwuj mailowo</a>
               </div>
             </div>
@@ -162,7 +162,7 @@
             <div class='col-4 info'>
               <p class='price'>119 zł</p>
               <div class='btn-group'>
-                <a class='btn btn-default' href='http://www.sklep.vileda.pl/produkt/deska_viva_express_smart_.php' target='_blank'>link</a>
+                <a class='btn btn-default' href='http://www.sklep.vileda.pl/produkt/deska_viva_express_smart_.php' target='_blank'>Zobacz w sklepie</a>
                 <a class='btn btn-default' href='mailto:prezenty.breczewscy@gmail.com?Subject=Rezerwacja%20prezentu%20weselnego'>Zarezerwuj mailowo</a>
               </div>
             </div>
@@ -177,7 +177,7 @@
             <div class='col-4 info'>
               <p class='price'>283 zł</p>
               <div class='btn-group'>
-                <a class='btn btn-default' href='http://www.ceneo.pl/393451' target='_blank'>link</a>
+                <a class='btn btn-default' href='http://www.ceneo.pl/393451' target='_blank'>Zobacz w sklepie</a>
                 <a class='btn btn-default' href='mailto:prezenty.breczewscy@gmail.com?Subject=Rezerwacja%20prezentu%20weselnego'>Zarezerwuj mailowo</a>
               </div>
             </div>
@@ -192,7 +192,7 @@
             <div class='col-4 info'>
               <p class='price'>150 zł</p>
               <div class='btn-group'>
-                <a class='btn btn-default' href='http://www.ikea.com/pl/pl/catalog/products/40155311/' target='_blank'>link</a>
+                <a class='btn btn-default' href='http://www.ikea.com/pl/pl/catalog/products/40155311/' target='_blank'>Zobacz w sklepie</a>
                 <a class='btn btn-default' href='mailto:prezenty.breczewscy@gmail.com?Subject=Rezerwacja%20prezentu%20weselnego'>Zarezerwuj mailowo</a>
               </div>
             </div>
@@ -207,7 +207,7 @@
             <div class='col-4 info'>
               <p class='price'>150 zł</p>
               <div class='btn-group'>
-                <a class='btn btn-default' href='http://www.ikea.com/pl/pl/catalog/products/40155311/' target='_blank'>link</a>
+                <a class='btn btn-default' href='http://www.ikea.com/pl/pl/catalog/products/40155311/' target='_blank'>Zobacz w sklepie</a>
                 <a class='btn btn-default' href='mailto:prezenty.breczewscy@gmail.com?Subject=Rezerwacja%20prezentu%20weselnego'>Zarezerwuj mailowo</a>
               </div>
             </div>
@@ -222,7 +222,7 @@
             <div class='col-4 info'>
               <p class='price'>15 zł</p>
               <div class='btn-group'>
-                <a class='btn btn-default' href='http://www.ikea.com/pl/pl/catalog/products/30131716' target='_blank'>link</a>
+                <a class='btn btn-default' href='http://www.ikea.com/pl/pl/catalog/products/30131716' target='_blank'>Zobacz w sklepie</a>
                 <a class='btn btn-default' href='mailto:prezenty.breczewscy@gmail.com?Subject=Rezerwacja%20prezentu%20weselnego'>Zarezerwuj mailowo</a>
               </div>
             </div>
@@ -237,7 +237,7 @@
             <div class='col-4 info'>
               <p class='price'>155 zł</p>
               <div class='btn-group'>
-                <a class='btn btn-default' href='http://www.ceneo.pl/58315#tab=spec_scroll' target='_blank'>link</a>
+                <a class='btn btn-default' href='http://www.ceneo.pl/58315#tab=spec_scroll' target='_blank'>Zobacz w sklepie</a>
                 <a class='btn btn-default' href='mailto:prezenty.breczewscy@gmail.com?Subject=Rezerwacja%20prezentu%20weselnego'>Zarezerwuj mailowo</a>
               </div>
             </div>
@@ -252,7 +252,7 @@
             <div class='col-4 info'>
               <p class='price'>29zł</p>
               <div class='btn-group'>
-                <a class='btn btn-default' href='http://www.ceneo.pl/10547613' target='_blank'>link</a>
+                <a class='btn btn-default' href='http://www.ceneo.pl/10547613' target='_blank'>Zobacz w sklepie</a>
                 <a class='btn btn-default' href='mailto:prezenty.breczewscy@gmail.com?Subject=Rezerwacja%20prezentu%20weselnego'>Zarezerwuj mailowo</a>
               </div>
             </div>
@@ -267,7 +267,7 @@
             <div class='col-4 info'>
               <p class='price'>102 zł</p>
               <div class='btn-group'>
-                <a class='btn btn-default' href='http://www.ceneo.pl/10968337' target='_blank'>link</a>
+                <a class='btn btn-default' href='http://www.ceneo.pl/10968337' target='_blank'>Zobacz w sklepie</a>
                 <a class='btn btn-default' href='mailto:prezenty.breczewscy@gmail.com?Subject=Rezerwacja%20prezentu%20weselnego'>Zarezerwuj mailowo</a>
               </div>
             </div>
@@ -282,7 +282,7 @@
             <div class='col-4 info'>
               <p class='price'>129 zł</p>
               <div class='btn-group'>
-                <a class='btn btn-default' href='http://www.ceneo.pl/528295allegro' target='_blank'>link</a>
+                <a class='btn btn-default' href='http://www.ceneo.pl/528295allegro' target='_blank'>Zobacz w sklepie</a>
                 <a class='btn btn-default' href='mailto:prezenty.breczewscy@gmail.com?Subject=Rezerwacja%20prezentu%20weselnego'>Zarezerwuj mailowo</a>
               </div>
             </div>
@@ -297,7 +297,7 @@
             <div class='col-4 info'>
               <p class='price'>59 zł</p>
               <div class='btn-group'>
-                <a class='btn btn-default' href='http://www.ceneo.pl/23861608#tab=spec' target='_blank'>link</a>
+                <a class='btn btn-default' href='http://www.ceneo.pl/23861608#tab=spec' target='_blank'>Zobacz w sklepie</a>
                 <a class='btn btn-default' href='mailto:prezenty.breczewscy@gmail.com?Subject=Rezerwacja%20prezentu%20weselnego'>Zarezerwuj mailowo</a>
               </div>
             </div>
@@ -312,7 +312,7 @@
             <div class='col-4 info'>
               <p class='price'>59 zł</p>
               <div class='btn-group'>
-                <a class='btn btn-default' href='http://www.ceneo.pl/23861608#tab=spec' target='_blank'>link</a>
+                <a class='btn btn-default' href='http://www.ceneo.pl/23861608#tab=spec' target='_blank'>Zobacz w sklepie</a>
                 <a class='btn btn-default' href='mailto:prezenty.breczewscy@gmail.com?Subject=Rezerwacja%20prezentu%20weselnego'>Zarezerwuj mailowo</a>
               </div>
             </div>
