--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <div class='welcome'>
         <p>Cieszymy się, że zajrzeliście na naszą stronę. Poniżej znajdziecie listę prezentów, którą przygotowaliśmy, aby ułatwić Wam decyzję o</p>
         <p>W związku z tym, że będziemy urządzali nasze gospodarstwo domowe od podstaw, ucieszyłyby nas środki finansowe na ten cel. Jeśli wygodniej byłoby Wam dokonać przelewu, to podajemy numer konta bankowego Hani:<p>
-        <code class='account'>1234567890123455</code>
+        <code class='account'>88 1090 1737 0000 0001 0403 0740</code>
         <p>Dane do przelewu znajdziecie na odwrocie zaproszenia lub zawiadomienia (adres domu weselnego).</p>
         <p>Jeżeli wolelibyście podarować nam prezent rzeczowy, to poniżej znajduje się lista naszych propozycji.</p>
       </div>
