--- a/index.html
+++ b/index.html
@@ -16,11 +16,14 @@
         <img src='assets/breczewscy.jpg'/>
       </div>
       <div class='welcome'>
-        <p>Cieszymy się, że zajrzeliście na naszą stronę. Poniżej znajdziecie listę prezentów, którą przygotowaliśmy, aby ułatwić Wam decyzję o</p>
+        <p>Cieszymy się, że zajrzeliście na naszą stronę. Mamy nadzieję, że informacje tu zawarte będą dla Was pomocne.</p>
+        <p>Jeśli poszukujecie informacji o dojeździe na miejsce ślubu, <a href="http://goo.gl/CzIV4o" target='_blank'>zajrzyjcie tutaj</a>.</p>
         <p>W związku z tym, że będziemy urządzali nasze gospodarstwo domowe od podstaw, ucieszyłyby nas środki finansowe na ten cel. Jeśli wygodniej byłoby Wam dokonać przelewu, to podajemy numer konta bankowego Hani:<p>
         <code class='account'>88 1090 1737 0000 0001 0403 0740</code>
         <p>Dane do przelewu znajdziecie na odwrocie zaproszenia lub zawiadomienia (adres domu weselnego).</p>
-        <p>Jeżeli wolelibyście podarować nam prezent rzeczowy, to poniżej znajduje się lista naszych propozycji.</p>
+        <p>Poniżej zaś znajdziecie listę prezentów, którą przygotowaliśmy, aby ułatwić Wam wybór. Prosimy o rezerwowanie prezentów, na które się zdecydujecie, poprzez <a href='mailto:prezenty.breczewscy@gmail.com?Subject=Rezerwacja%20prezentu%20weselnego'>kontakt mailowy</a> bądź telefoniczny:</p>
+<p>Ula Rataj: 695 505 018 (do 12.08 na wakacjach za granicą)</p>
+<p>Jan Bręczewski: 727 902 800</p>
       </div>
       <article class='presents'>
 
