--- a/index.html
+++ b/index.html
@@ -24,13 +24,14 @@
         <p>Poniżej zaś znajdziecie listę prezentów, którą przygotowaliśmy, aby ułatwić Wam wybór. Prosimy o rezerwowanie prezentów, na które się zdecydujecie, poprzez <a href='mailto:prezenty.breczewscy@gmail.com?Subject=Rezerwacja%20prezentu%20weselnego'>kontakt mailowy</a> bądź telefoniczny:</p>
 <p>Ula Rataj: 695 505 018 (do 12.08 na wakacjach za granicą)</p>
 <p>Jan Bręczewski: 727 902 800</p>
+<p></p>
       </div>
       <article class='presents'>
 
         <section>
           <div class='row'>
             <div class='col-7'>
-              <h1>szybkowar Fagor innova 6 918011849</h1>
+              <h1>Szybkowar Fagor innova 6 918011849</h1>
             </div>
             <div class='col-5 info'>
               <p class='price'>217 zł</p>
