--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
         <section>
           <div class='row'>
             <div class='col-7'>
-              <h1>walizka czerwona Puccini ABS01C-3 (mała)</h1>
+              <h1>Walizka czerwona Puccini ABS01C-3 (mała)</h1>
             </div>
             <div class='col-5 info'>
               <p class='price'>256 zł</p>
@@ -105,7 +105,7 @@
         <section>
           <div class='row'>
             <div class='col-7'>
-              <h1>walizka czerwona Puccini ABS01A-3 (duża)</h1>
+              <h1>Walizka czerwona Puccini ABS01A-3 (duża)</h1>
             </div>
             <div class='col-5 info'>
               <p class='price'>332 zł</p>
