--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
         <section>
           <div class='row'>
             <div class='col-7'>
-              <h1>Śpiwór Fjord Nansen Finmark L (lewy)/h1>
+              <h1>Śpiwór Fjord Nansen Finmark L (lewy)</h1>
             </div>
             <div class='col-5 info'>
               <p class='price'>199 zł</p>
