--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
       <div class='header-image'>
         <img src='assets/breczewscy.jpg'/>
       </div>
-      <div class='welcome'>
-        <p>Dziękujemy!</p>
+      <div>
+        <p style="text-align: center">Dziękujemy!</p>
         <p style="text-align: right">Hanna i Stanisław Bręczewscy</p>
       </div>
 
