--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <div class='header-image'>
         <img src='assets/breczewscy.jpg'/>
       </div>
-      <div>
+      <div class='welcome'>
         <p style="text-align: center">Dziękujemy!</p>
         <p style="text-align: right">Hanna i Stanisław Bręczewscy</p>
       </div>
